# ModularMind-V2

./: .coverage-threshold.json  .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  eslint.config.mjs  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
engine/server/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
engine/server/alembic/: env.py
engine/server/alembic/versions/: a1b2c3d4e5f6_add_memory_type_temporal_edges.py  a9b0c1d2e3f4_drop_memory_tables.py  b3c4d5e6f7a8_add_last_memory_extracted_at.py  c5d6e7f8a9b0_add_same_tag_edge_type.py  d6e7f8a9b0c1_drop_user_source_column.py  e7f8a9b0c1d2_add_message_attachments.py  f8a9b0c1d2e3_memory_to_rag_schema.py  fc4125d7a33c_initial_v2.py  g1a2b3c4d5e6_add_gateway_tables.py  h2b3c4d5e6f7_add_automation_runs.py  i3c4d5e6f7g8_add_extended_tools_tables.py  j4d5e6f7g8h9_add_conversation_graph_id.py  k5e6f7g8h9i0_add_mini_apps_tables.py  l6f7g8h9i0j1_add_scheduled_tasks.py  m7g8h9i0j1k2_add_github_tokens.py  n8h9i0j1k2l3_upgrade_scheduled_tasks.py  o9i0j1k2l3m4_connectors_execution_mode.py  p0j1k2l3m4n5_add_start_at_to_scheduled_tasks.py  q1k2l3m4n5o6_add_projects.py  r2l3m4n5o6p7_add_system_indexer.py  s3m4n5o6p7q8_add_project_repositories.py  t4n5o6p7q8r9_add_repo_index_status.py  u5v6w7x8y9z0_connector_scoping_and_credentials.py
engine/server/scripts/: deduplicate_configs.py  migrate_from_platform.py
engine/server/seed/knowledge/: seed_knowledge.py
engine/server/seeds/: github_issue_resolver.json  seed.py  seed.sh
engine/server/seeds/agents/: approval_tester.yaml  codebase_investigator.yaml  deliverer.yaml  fix_implementer.yaml  issue_analyst.yaml  quality_guard.yaml  solution_designer.yaml
engine/server/seeds/graphs/: approval_gate_demo.yaml  github_issue_resolver.yaml
engine/server/seeds/knowledge/: seed_knowledge.py
engine/server/src/: cli.py  main.py  spa.py
engine/server/src/admin/: __init__.py  schemas.py  service.py  user_analytics_router.py  user_conversations_router.py  user_router.py
engine/server/src/agents/: __init__.py  router.py  schemas.py  service.py
engine/server/src/auth/: __init__.py  dependencies.py  models.py  profile_synthesizer.py  router.py  schemas.py  secrets.py  service.py
engine/server/src/automations/: __init__.py  hooks.py  models.py  router.py  runner.py  tool_definitions.py  tool_executor.py  triage.py
engine/server/src/connectors/: __init__.py  builder_graph.py  builder_prompts.py  catalog.py  credentials.py  execution.py  models.py  oauth_providers.py  oauth_router.py  outbound.py  registry.py  router.py  schemas.py  seed_agents.py  webhook_router.py
engine/server/src/conversations/: __init__.py  admin_router.py  attachment_router.py  compaction.py  compaction_router.py  crud_router.py  helpers.py  indexer.py  message_router.py  models.py  router.py  schemas.py  search.py  search_router.py  service.py  supervisor_dispatch.py
engine/server/src/domain_config/: __init__.py  models.py  provider.py  repository.py
engine/server/src/embedding/: __init__.py  base.py  ollama.py  openai.py  resolver.py
engine/server/src/executions/: __init__.py  agent_executor.py  approval.py  cancel.py  creation.py  dispatch.py  feedback.py  graph_executor.py  models.py  router.py  scheduler.py  schemas.py  service.py  webhook.py
engine/server/src/fine_tuning/: __init__.py  ab_testing.py  auto_retrain.py  dataset_exporter.py  models.py  router.py  schemas.py  service.py
engine/server/src/gateway/: __init__.py  executor.py  tool_definitions.py
engine/server/src/graph_engine/: __init__.py  _utils.py  agent_invoker.py  builtin_tools.py  callbacks.py  compiler.py  condition_eval.py  interfaces.py  nodes_agent.py  nodes_flow.py  nodes_supervisor.py  state.py  tool_loop.py
engine/server/src/graphs/: __init__.py  router.py  schemas.py  service.py
engine/server/src/groups/: __init__.py  models.py  router.py  schemas.py  service.py
engine/server/src/health/: __init__.py  router.py
engine/server/src/hooks/: code_index_handler.py  github_push.py
engine/server/src/infra/: config.py  constants.py  database.py  event_bus.py  gpu.py  log_handler.py  metrics.py  object_store.py  pagination.py  publish.py  qdrant.py  query_utils.py  rate_limit.py  redis.py  redis_streams.py  redis_utils.py  schemas.py  secrets.py  sse.py  stream_names.py  text_utils.py  token_counter.py  token_pricing.py  tokenizer.py  url_validation.py  utils.py  vector_store.py
engine/server/src/internal/: __init__.py  actions.py  alerts.py  auth.py  claude_debug.py  github_tokens.py  logs.py  monitoring.py  pipelines.py  playground.py  providers.py  router.py  schemas.py  settings.py  supervisor_layers.py
engine/server/src/llm/: __init__.py  anthropic.py  base.py  bridge_exec.py  claude_bridge.py  cohere.py  errors.py  google.py  groq.py  mistral.py  ollama.py  openai.py  provider_factory.py
engine/server/src/mcp/: __init__.py  catalog.py  client.py  internal_server.py  registry.py  router.py  schemas.py  scoped_executor.py  sdk_client.py  service.py  sidecar.py  tool_adapter.py  usage_router.py  validation.py
engine/server/src/memory/: __init__.py  consolidator.py  fact_extractor.py  graph_builder.py  (+8 more)
engine/server/tests/: conftest.py  test_conversations.py  test_extended_tools.py  test_groups.py  test_health.py  test_llm_errors.py  test_mcp_tool_categories.py
gateway/: Dockerfile  pyproject.toml
gateway/sandbox/: Dockerfile
gateway/src/: auth.py  config.py  main.py  permission_engine.py  router.py  schemas.py
gateway/src/approval/: cleanup.py  models.py  rules.py  service.py
gateway/src/audit/: models.py  router.py  service.py
gateway/src/executors/: base.py  browser.py  code_search.py  filesystem.py  network.py  shell.py
gateway/src/infra/: database.py  metrics.py  middleware.py  redis.py
gateway/src/models/: agent_config.py
gateway/src/sandbox/: cleanup.py  direct_executor.py  manager.py
gateway/tests/: e2e_test.sh
shared/: pyproject.toml
shared/src/modularmind_shared/: __init__.py  utils.py
(+783 files in other folders)
