[project]
name = "modularmind-gateway"
version = "1.0.0"
description = "ModularMind Gateway — Secure System Access for AI Agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis>=5.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "python-jose[cryptography]>=3.3",
    "cryptography>=44.0",
    "apscheduler>=3.10",
    "docker>=7.0.0",
    "aiofiles>=24.1",
    "python-multipart>=0.0.18",
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
    "ddgs>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
