[project]
name = "modularmind-gateway"
version = "1.0.0"
description = "ModularMind Gateway — Secure System Access for AI Agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30",
    "redis>=5.2,<6.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "httpx>=0.28",
    "python-jose[cryptography]>=3.3",
    "cryptography>=44.0",
    "apscheduler>=3.10",
    "docker>=7.0.0",
    "aiofiles>=24.1",
    "python-multipart>=0.0.18",
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
    "ddgs>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
