[project]
name = "modularmind-shared"
version = "2.0.0"
description = "ModularMind shared schemas and protocols — used by Engine and Studio"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modularmind_shared"]

[tool.ruff]
target-version = "py312"
line-length = 100
