[project]
name = "modularmind-engine"
version = "2.0.0"
description = "ModularMind Engine — Headless AI Agent Execution Runtime"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2,<6.0",
    "qdrant-client>=1.13",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "pydantic[email]>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "httpx>=0.28",
    "aiofiles>=24.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.18",
    "cryptography>=44.0",
    "apscheduler>=3.10",
    "openai>=1.0",
    "tiktoken>=0.7.0",
    "mmh3>=4.0.0",
    "nltk>=3.9.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "psutil>=5.9.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "docker>=7.0.0",
    "mcp>=1.26.0",
    "PyJWT>=2.8.0",
    "PyNaCl>=1.5.0",
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
    "aiobotocore>=2.12.0",
    "modularmind-shared",
    "duckduckgo-search>=7.0",
    "trafilatura>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E402"]  # late imports used to avoid circular dependencies

[tool.ruff.lint.per-file-ignores]
"seed/**" = ["E501"]  # seed data has long description strings
"src/supervisor/prompts.py" = ["E501"]  # prompt templates
"src/mcp/catalog.py" = ["E501"]  # tool description strings
"src/gateway/tool_definitions.py" = ["E501"]  # tool description strings
"src/graph_engine/builtin_tools.py" = ["E501"]  # tool description strings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
